# BigMartSalesPred_Hackathon

./: .gitignore  BigMartSalesPred_Hackathon.code-workspace  README.md  log.txt  main.py  main_seg.py  pyproject.toml  requirements.txt
notebooks/: eda.ipynb  features.ipynb  imputer.ipynb  train_pred.ipynb
src/ingest/: ingest.py
src/train/: model_trainer.py  segmented_model_trainer.py
src/transform/: feature_encoder.py  feature_engineering.py
