[project]
name = "bigmartsalespred-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.30.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "optuna>=4.4.0",
    "panda>=0.3.1",
    "scikit-learn>=1.7.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "xgboost>=3.0.2",
]
